--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@reduxjs/toolkit": "^1.9.5",
     "@sanity/client": "^6.4.9",
     "@sanity/image-url": "^1.0.2",
     "expo": "~49.0.8",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
+    "react-currency-formatter": "^1.1.0",
     "react-native": "0.72.4",
     "react-native-heroicons": "^3.2.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "^13.13.0",
+    "react-redux": "^8.1.2",
     "tailwindcss-react-native": "^1.7.10"
   },
   "devDependencies": {
