--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@sanity/image-url": "^1.0.2",
     "expo": "~49.0.8",
     "expo-status-bar": "~1.6.0",
+    "install": "^0.13.0",
     "react": "18.2.0",
     "react-currency-formatter": "^1.1.0",
     "react-native": "0.72.4",
+    "react-native-animatable": "^1.3.3",
     "react-native-heroicons": "^3.2.0",
+    "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "^13.13.0",
